$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-10-12 [B] Fixed last visit display in user manager when bridged with SMF2 (thread ID 67422) {eenemeenemuu}
2010-10-05 [D] Added partial Swedish documentation {GauGau}
2010-10-05 [O] Updated Swedish language file (previous version was mainly a Danish language file) {GauGau}
2010-10-03 [B] Fixed template placeholder bug that caused cut off tags {Nibbler}
2010-10-01 [B] Fixed use of mysql_insert_id (thread ID 67402) {Nibbler}
2010-10-01 [B] Fixed critical error on memberlist when bridged (thread ID 64678) {eenemeenemuu}
2010-09-30 [C] Fixed deprecated message on pluginmgr.php (thread ID 67308) {eenemeenemuu}
2010-09-27 [B] Fixed session table name in SMF bridge files (thread ID 67169) {eenemeenemuu}
2010-09-27 [C] Fixed error message if uploaded file exceeds dimension limit (thread ID 67282) {eenemeenemuu}
2010-09-16 [B] Fixed registration process if both email verification and admin activation enabled (thread ID 67095) {eenemeenemuu}
2010-09-12 [B] Fixed display of unprocessed bbcode markup in ecard display {Nibbler}
2010-09-10 [O] Optimized picture resizing and watermarking procedure {eenemeenemuu}
2010-09-10 [B] Fixed exif issue when auto resizing is enabled and watermarking is disabled (thread ID 66994 & 66489) {eenemeenemuu}
2010-09-10 [A] Show 'upload needs admin approval' message for flash uploader (thread ID 66832) {eenemeenemuu}
2010-09-10 [B] Fixed setting email sender address {Nibbler}
2010-09-03 [B] Updated regex to fix error message for blank 'allowed file types' values (thread ID 66289) {eenemeenemuu}